Fixing responsive image display bug on Iphone

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
 
 .logo {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
 }
 
@@ -163,7 +163,7 @@ header {
     flex-shrink: 0;
 }
 
-@media screen and (max-width: 950px) and (orientation: portrait){
+@media screen and (max-width: 950px) {
     .header-form {
         width: 95%;
         max-width: 350px;
@@ -182,7 +182,7 @@ header {
     }
 }
 
-@media screen and (max-width: 500px) and (orientation: portrait) {
+@media screen and (max-width: 500px) {
     
     header {
         height: 450px;
@@ -194,8 +194,7 @@ header {
     
     .logo-container {
         left: 5px;
-        width: auto;
-        height:60px;
+        width: 100px;
     }
 
     .header-menu {
